--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -19,6 +19,10 @@
     .input:disabled{
         @apply opacity-50 cursor-not-allowed;
     }
+
+    td, th{
+        @apply px-3 py-4;
+    }
 }
 
 *{
